# ChangeLog for kde-misc/kgrubeditor
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Sep 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
  +kgrubeditor-0.8.5.ebuild, -kgrubeditor-0.8.5b.ebuild:
  Version bump to major version 0.8.5.

  21 Sep 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
  -kgrubeditor-0.7.ebuild, +kgrubeditor-0.8.5b.ebuild:
  Version bump for kgrubeditor

  21 May 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  kgrubeditor-0.7.ebuild:
  Remove unnecessary unneeded from RDEPEND, as magic takes care of the eclass
  dependency stacking

  01 May 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  -kgrubeditor-0.6.ebuild, +kgrubeditor-0.7.ebuild:
  Version bump.

  26 Mar 2008; Markus Ullmann <jokey@gentoo.org> kgrubeditor-0.6:
  Works on x86 as well

  26 Mar 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  +kgrubeditor-0.6.ebuild, +metadata.xml:
  New ebuild for bug #210960
