@@ -1,4 +1,4 @@
 DIST KGRUBEditor-0.8.5-src.tar.bz2 142497 RMD160 e18996ec7c774d2ff60924e0ffa390889f2110a1 SHA1 59d82061711bc5f24f73250e110a59a9f290e175 SHA256 8d9fca9447985c19c9787a5ec4aa009492848bbbf58c5c0ee28dcd54535bea66
-EBUILD kgrubeditor-0.8.5.ebuild 485 RMD160 606d0efb9d529f19be9d4ecc3d8ea89bc61f2327 SHA1 e95eaf0f9e376227759b47b0dab211e145c62e72 SHA256 3052c27fc86d97fff769f78b451355376dd22c865b42f6f113bf8999e59bbfa9
-MISC ChangeLog 1002 RMD160 2dddba51f032ac34b88cc3f7ac71b7791c221c09 SHA1 0f02a2c71ae46cc7b4b7e22cce79c645bcf342b4 SHA256 466ca73570514417b4bd6fe98ad30d774fbe66fd5c3970a2667c6a0a73a36e75
+EBUILD kgrubeditor-0.8.5.ebuild 463 RMD160 c95a885810b230f7907d00983a808de13bc1f4c7 SHA1 790be4cb5b4eaca68a6878ea14d3ed268a173448 SHA256 567e170aff3eb27b4a23513ea2499510274c3365815bb9723c1306755c9f95d6
+MISC ChangeLog 1205 RMD160 40bce58d85bf17f3c89d24aad15210927449b912 SHA1 ca2fb0d6cef42140a9f44da00fbc7a5589025d9e SHA256 e14da38e5dec491de23bc3a4a2f55ad540d0e9bc503487aba325c407733236be
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
